--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,25 @@
 @tailwind base;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: bb96fff6 rgba(64, 47, 81, 0.479);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(64, 47, 81, 0.479);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #bb96fff6;
+  border-radius: 14px;
+  border: 3px solid rgba(64, 47, 81, 0.479);
+}
+
 @tailwind components;
 @tailwind utilities;
 body {
